--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -2,7 +2,7 @@
     <head>
         <script>
         // Registrazione Service Worker
-        navigator.serviceWorker.register('/worker.js'), {scope: '/path-tobe-cached/'}.then(
+        navigator.serviceWorker.register('/worker.js').then(
             function(reg) {
                 console.log(':-)', reg);
             }, 
