--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -2,14 +2,19 @@
     <head>
         <script>
         // Registrazione Service Worker
-        navigator.serviceWorker.register('/worker.js').then(
-            function(reg) {
-                console.log(':-)', reg);
-            }, 
-            function(err) {
-                console.log(':-(', err);
-            }
-        );
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/worker.js').then(
+                function(reg) {
+                    console.log(':-)', reg);
+                }, 
+                function(err) {
+                    console.log(':-(', err);
+                }
+            );
+        }
+        else {
+            console.log('Service worker not supported');
+        }
         </script>
     </head>
     <body>
