--- a/immagini.html
+++ b/immagini.html
@@ -1,67 +1,31 @@
 <html>
     <head>
         <style type='text/css'>
-         div {
-            font-size: 0;
-        }
-
-        a {
-            font-size: 16px; 
-            display: inline-block;
-            margin-bottom: 8px;
-            width: calc(50% - 4px);
-            margin-right: 8px;
-        }
-
-        a:nth-of-type(2n) {
-            margin-right: 0;
-        }
-
-        @media screen and (min-width: 50em) {
-            a {
-                width: calc(25% - 6px);
-            }
-            a:nth-of-type(2n) {
-                margin-right: 8px;
-            }
-            a:nth-of-type(4n) {
-                margin-right: 0;
-            }
-        }
+            .grid_element {
+                display: inline-block;
+                width: 200px;
+                height:200px;
+            }  
         </style>        
     </head>
     <body>
-        <div>
-            <a href='img1_cache.jpg'>
-                <figure>
-                    <img src='img1_cache.jpg' alt=''>
-                </figure>
-            </a>
-            <a href='img2_cache.jpg'>
-                <figure>
-                    <img src='img2_cache.jpg' alt=''>
-                </figure>
-            </a>
-            <a href='img3_cache.jpg'>
-            <figure>
-                <img src='img3_cache.jpg' alt=''>
-            </figure>
-            </a>
-            <a href='img1_nocache.jpg'>
-                <figure>
-                    <img src='img1_nocache.jpg' alt=''>
-                </figure>
-            </a>
-            <a href='img2_nocache.jpg'>
-                <figure>
-                    <img src='img2_nocache.jpg' alt=''>
-                </figure>
-            </a>
-            <a href='img3_nocache.jpg'>
-            <figure>
-                <img src='img3_nocache.jpg' alt=''>
-            </figure>
-            </a>            
+        <div class='grid_element'>
+            <img src='img1_cache.jpg' alt=''>
+        </div>
+        <div class='grid_element'>
+            <img src='img2_cache.jpg' alt=''>
+        </div>
+        <div class='grid_element'>
+            <img src='img3_cache.jpg' alt=''>
+        </div>
+        <div class='grid_element'>
+            <img src='img1_nocache.jpg' alt=''>
+        </div>
+        <div class='grid_element'>
+            <img src='img2_nocache.jpg' alt=''>
+        </div>
+        <div class='grid_element'>
+            <img src='img3_nocache.jpg' alt=''>
         </div>
     </body>
 </html>
