--- a/immagini.html
+++ b/immagini.html
@@ -3,9 +3,14 @@
         <style type='text/css'>
             .grid_element {
                 display: inline-block;
-                width: 200px;
-                height:200px;
+                width: 100px;
+                height: 100x;
+                margin: 5px;
             }  
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
         </style>        
     </head>
     <body>
