--- a/immagini.html
+++ b/immagini.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class='grid_element'>
-            <img src='logo_cache.jpg' alt=''>
+            <img src='logo_cache.png' alt=''>
         </div>
         <!--
         <div class='grid_element'>
@@ -26,7 +26,7 @@
         </div>
         -->
         <div class='grid_element'>
-            <img src='logo_nocache.jpg' alt=''>
+            <img src='logo_nocache.png' alt=''>
         </div>
         <!--
         <div class='grid_element'>
