--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -18,6 +18,6 @@
         </script>
     </head>
     <body>
-        <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI</button>
+        <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
 </html>
