--- a/immagini.html
+++ b/immagini.html
@@ -17,24 +17,9 @@
         <div class='grid_element'>
             <img src='logo_cache.png' alt=''>
         </div>
-        <!--
-        <div class='grid_element'>
-            <img src='img2_cache.jpg' alt=''>
-        </div>
-        <div class='grid_element'>
-            <img src='img3_cache.jpg' alt=''>
-        </div>
-        -->
         <div class='grid_element'>
             <img src='logo_nocache.png' alt=''>
         </div>
-        <!--
-        <div class='grid_element'>
-            <img src='img2_nocache.jpg' alt=''>
-        </div>
-        <div class='grid_element'>
-            <img src='img3_nocache.jpg' alt=''>
-        </div>
-        -->
+        <button onclick="serviceWorkerRegistration.showNotification('Notifica Push');">Notifica Push</button>
     </body>
 </html>
