--- a/immagini.html
+++ b/immagini.html
@@ -20,6 +20,8 @@
         <div class='grid_element'>
             <img src='logo_nocache.png' alt=''>
         </div>
-        <button onclick="serviceWorkerRegistration.showNotification('Notifica Push');">Notifica Push</button>
+        <div>
+            <button onclick="serviceWorkerRegistration.showNotification('Notifica Push');">Notifica Push</button>
+        </div>
     </body>
 </html>
