--- a/immagini.html
+++ b/immagini.html
@@ -11,7 +11,35 @@
                 max-width: 100%;
                 max-height: 100%;
             }
-        </style>        
+        </style>  
+        <script>
+            function initialiseState() {
+                if (Notification.permission !== 'granted') {
+                    console.log('The user has not granted the notification permission.');
+                    return;
+                } else if (Notification.permission === 'blocked') {
+                /* the user has previously denied push. Can't reprompt. */
+                } 
+                else {
+                    /* show a prompt to the user */
+                }
+
+                // Use serviceWorker.ready so this is only invoked
+                // when the service worker is available.
+                navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
+                    serviceWorkerRegistration.pushManager.getSubscription()
+                    .then(function(subscription) {
+                        if (!subscription) {
+                        // Set appropriate app states.
+                        return;
+                        }
+                    })
+                    .catch(function(err) {
+                        console.log('Error during getSubscription()', err);
+                    });
+                });
+    }
+        </script>      
     </head>
     <body>
         <div class='grid_element'>
@@ -21,7 +49,7 @@
             <img src='logo_nocache.png' alt=''>
         </div>
         <div>
-            <button onclick="serviceWorkerRegistration.showNotification('Notifica Push');">Notifica Push</button>
+            <button onclick="initialiseState()">Sottoscrivi Push</button>
         </div>
     </body>
 </html>
