--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <style>
+            body { font-family: 'UniCredit Regular'; }
+
+        </style>
         <script>
         // Registrazione Service Worker
         if ('serviceWorker' in navigator) {
@@ -18,6 +22,10 @@
         </script>
     </head>
     <body>
+        <h3>
+            <p>Service Workers LifeCycle</p>
+            
+        </h3>
         <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
 </html>
