--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <style>
+            @font-face {
+                font-family: 'UniCredit Regular';
+                src: url('/font/UniCredit-Regular.ttf');
+            }
             body { font-family: 'UniCredit Regular'; }
 
         </style>
@@ -24,7 +28,7 @@
     <body>
         <h3>
             <p>Service Workers LifeCycle</p>
-            
+
         </h3>
         <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
