--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -3,9 +3,10 @@
         <style>
             @font-face {
                 font-family: 'UniCredit Regular';
-                src: url('/font/UniCredit-Regular.ttf');
+                src: url('/font/UniCredit.ttf');
             }
             body { font-family: 'UniCredit Regular'; }
+            h1, h2, h3 { font-family: 'UniCredit Bold'; }
 
         </style>
         <script>
