--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -2,8 +2,8 @@
     <head>
         <style>
             @font-face {
-                font-family: 'UniCredit Regular';
-                src: url('/font/UniCredit.ttf');
+                font-family: 'UniCredit';
+                src: url('/font/UniCredit Regular.ttf');
             }
             body { font-family: 'UniCredit Regular'; }
             h1, h2, h3 { font-family: 'UniCredit Bold'; }
@@ -36,7 +36,7 @@
                 Possiamo avere 1! ServiceWorker per Scope: questo per evitare sovrapposizioni tra gli artifact cachabili da ciascuno di essi.<br>
             </p>
         <h2>Ciclo di vita</h2>
-        
+
 
         <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
