--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             @font-face {
-                font-family: 'UniCredit';
+                font-family: 'UniCredit Regular';
                 src: url('/font/UniCredit Regular.ttf');
             }
             body { font-family: 'UniCredit Regular'; }
