--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -32,7 +32,7 @@
             <p>
                 Consiste in un Proxy locale al browser, con una gestione applicativa della cache degli elementi del sito.<br>
                 Lo Scope di un ServiceWorker è definito dalla posizione del file worker.js nel sito, e dalle eventuali sottodirectory.<br>
-                Possiamo definire esplicitamente uno Scope che sia una restrizione dello scope standard di cui sopra (non un'estensione quindi).<br>
+                Possiamo inoltre definire uno Scope che sia una restrizione dello scope standard di cui sopra (non un'estensione quindi).<br>
                 Possiamo avere 1! ServiceWorker per Scope: questo per evitare sovrapposizioni tra gli artifact cachabili da ciascuno di essi.<br>
             </p>
         <h2>Ciclo di vita</h2>
