--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -5,6 +5,10 @@
                 font-family: 'UniCredit Regular';
                 src: url('/font/UniCredit-Regular.ttf');
             }
+            @font-face {
+                font-family: 'UniCredit Bold';
+                src: url('/font/UniCredit-Bold.ttf');
+            }
             body { font-family: 'UniCredit Regular'; }
             h1, h2, h3 { font-family: 'UniCredit Bold'; }
 
