--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -45,12 +45,18 @@
         <h2>Ciclo di vita</h2>
             <p>Consideriamo gli eventi funzionali intercettabili applicativamente, prima e dopo la registrazione del Service Worker.
             <ul>
-                <li>INSTALL: scatta quando avvio la registrazione del Service Worker e parte il caching degli artifact dichiarati nel file worker.js<br>
-                    Come evento funzionale INSTALL comprende gli STATI 'INSTALLING'' e 'INSTALLED'. Durante la registrazione ed il caching degli artifact,<br>
+                <li><b>INSTALL:</b> scatta quando avvio la registrazione del Service Worker e parte il caching degli artifact dichiarati nel file worker.js
+                    Come evento funzionale INSTALL comprende gli STATI 'INSTALLING'' e 'INSTALLED'. Durante la registrazione ed il caching degli artifact,
                     lo stato rimane INSTALLING, per passare ad INSTALLED alla fine deel processo. 
-                <li>Il caching delle risorse dichiarate avviene in modalità asincrona, usando un pattern di BARRIER: ovvero vengono scaricati tutti gli<br>
+                <li>Il caching delle risorse dichiarate avviene in modalità asincrona, usando un pattern di BARRIER: ovvero vengono scaricati tutti gli
                     artifact in modo mutuamente indipendente, fino a che anche il più grande non venga cachato.
-
+                </li>La REGISTRAZIONE del Service Worker si considera ultimata solo dopo che lo stato arriva ad INSTALLED.
+                <li>Se esiste un Service Worker già registrato per lo stesso Scope, lo stato da INSTALLED passa a WAITING, in quanto può esserci 1! 
+                    Service Worker per Scope.
+                <li><b>ACTIVATE:</b> questo evento comprende gli stati ACTIVATING e ACTIVATED. Si utilizza di solito per eliminare le cache prodotte da versioni 
+                    precedenti del Service Worker.
+                <li><b>FETCH:</b> E' l'evento che scatta ogniqualvolta viene intercettata una chiamata ad un URL appastenente allo Scope del Service Worker.
+            </ul>
         <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
 </html>
