--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -11,7 +11,10 @@
             }
             body { font-family: 'UniCredit Regular'; }
             h1, h2, h3 { font-family: 'UniCredit Bold'; }
-            .codice {background: #dddddd; }
+            .codice {
+                background: #dddddd; 
+                width: 600px;
+                }
         </style>
         <script>
         // Registrazione Service Worker
