--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -14,6 +14,7 @@
             .codice {
                 background: #dddddd; 
                 width: 700px;
+                padding-left: 10px;
                 }
         </style>
         <script>
