--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -15,7 +15,11 @@
                 background: #dddddd; 
                 width: 700px;
                 padding-left: 10px;
-                }
+            }
+            #gotodemo {
+                font-family: 'UniCredit Bold';
+                font-size: 150%;
+            }
         </style>
         <script>
         // Registrazione Service Worker
@@ -106,7 +110,7 @@ self.addEventListener('fetch', function(event) {
 </pre>                                    
             </ul>
             <br>
-        <button onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
+        <button id='gotodemo' onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
     </body>
 </html>
 
