--- a/ServiceWorkerDemo.html
+++ b/ServiceWorkerDemo.html
@@ -110,7 +110,9 @@ self.addEventListener('fetch', function(event) {
 </pre>                                    
             </ul>
             <br>
-        <button id='gotodemo' onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
+            <center>
+                <button id='gotodemo' onclick="window.location='http://giurobrossi.github.io/immagini.html'">VAI ALLA DEMO</button>
+            </center>
     </body>
 </html>
 
